// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The DropDownMenuBase component should render 1`] = `
<div
  className="drop-down-menu-base drop-down-menu-base--south"
  onClick={[Function]}
>
  <Button
    appearance="no-style"
    className="drop-down-menu-base__trigger"
    linkToNewTab={false}
    onClickHandler={[Function]}
    shape="rectangle"
    type="button"
  >
    trigger
  </Button>
  <div
    className="drop-down-menu-base__menu-container"
  >
    <div
      className="drop-down-menu-base__menu"
    >
      <Spring
        config={
          Object {
            "friction": 35,
            "tension": 370,
          }
        }
        force={false}
        from={
          Object {
            "height": 0,
          }
        }
        immediate={false}
        inject={[Function]}
        native={true}
        reset={false}
        to={
          Object {
            "height": 0,
          }
        }
      >
        <Component />
      </Spring>
    </div>
    <div
      className="drop-down-menu-base__arrow"
    />
  </div>
</div>
`;

exports[`The DropDownMenuBase component should render drop down menu open 1`] = `
<div
  className="drop-down-menu-base drop-down-menu-base--south drop-down-menu-base--visible"
  onClick={[Function]}
>
  <Button
    appearance="no-style"
    className="drop-down-menu-base__trigger"
    linkToNewTab={false}
    onClickHandler={[Function]}
    shape="rectangle"
    type="button"
  >
    trigger
  </Button>
  <div
    className="drop-down-menu-base__menu-container"
  >
    <div
      className="drop-down-menu-base__menu"
    >
      <Spring
        config={
          Object {
            "friction": 35,
            "tension": 370,
          }
        }
        force={false}
        from={
          Object {
            "height": 0,
          }
        }
        immediate={false}
        inject={[Function]}
        native={true}
        reset={false}
        to={
          Object {
            "height": "auto",
          }
        }
      >
        <Component />
      </Spring>
    </div>
    <div
      className="drop-down-menu-base__arrow"
    />
  </div>
</div>
`;
